# finbalance

./: .gitignore  DATA_LICENSE.md  POINTS.md  README.md  pyproject.toml  results_report.txt
_archive/: README.md  README_v1.md
data/: README.md  sample2.jsonl  test.jsonl
docs_benchmark/: FLOW.md  POINTS.md  README.md  __init__.py  __main__.py  accounts.py  cli.py  inconsistencies.py  ledger.py  render.py  types.py
finbalance/: FLOW.md  README.md  __init__.py  __main__.py  cli.py  inconsistencies.py  ledger.py  render.py  schemas.py  types.py
human_verification/: README.md  generate_samples.py  sample_manifest.json  verification_responses.md
paper/: README.md  final.tex  macros.tex  main.tex  references.bib  review.tex
results/: anthropic_claude-haiku-4-5_zero_shot.json  baseline_rule_based.json  claude-3-haiku-20240307_zero_shot.json  claude-sonnet-4-6_zero_shot.json  deep_analysis.json  deepseek_deepseek-v3.2_cot.json  deepseek_deepseek-v3.2_zero_shot.json  failure_analysis_gemini_cot.json  failure_analysis_gemini_zero_shot.json  failure_analysis_gemma3_zero_shot.json  failure_analysis_gpt51_zero_shot.json  failure_analysis_gpt52_zero_shot.json  failure_analysis_gpt_oss_120b_zero_shot.json  failure_analysis_haiku45_zero_shot.json  failure_analysis_haiku_zero_shot.json  failure_analysis_llama_cot.json  failure_analysis_qwen3_8b_zero_shot.json  failure_analysis_qwen_zero_shot.json  google_gemini-3-flash-preview_cot.json  google_gemini-3-flash-preview_zero_shot.json  google_gemma-3-12b-it_cot.json  google_gemma-3-12b-it_zero_shot.json  leaderboard.json  (+5 more)
(+864 files in other folders)
